CSS clean up-- Remove unit on zero value

--- a/src/server_manager/ui_components/cloud-install-styles.html
+++ b/src/server_manager/ui_components/cloud-install-styles.html
@@ -27,9 +27,9 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
         line-height: 1.5em;
         display: inline-block;
         -webkit-margin-before: 1.25em;
-        -webkit-margin-after: 0em;
-        -webkit-margin-start: 0px;
-        -webkit-margin-end: 0px;
+        -webkit-margin-after: 0;
+        -webkit-margin-start: 0;
+        -webkit-margin-end: 0;
       }
 
       paper-button {
@@ -166,14 +166,14 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
       }
 
       .instructions-list img {
-        padding: 32px 0px 42px 0;
+        padding: 32px 0 42px 0;
         margin: auto;
       }
 
       .walkthrough {
         background: #FFFFFF;
         box-shadow: 0 3px 5px 0 rgba(0,0,0,0.10), 0 2px 4px 0 rgba(0,0,0,0.1), 0 4px 4px 0 rgba(0,0,0, .12);
-        top: 0px;
+        top: 0;
         display: block;
       }
 
@@ -183,7 +183,7 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
         color: rgba(0,0,0,0.87);
         max-width: 70%;
         margin: auto;
-        padding: 0px 0px 24px 0px;
+        padding: 0 0 24px 0;
         font-weight: normal;
       }
 
