--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -98,10 +98,10 @@
         width: 190px;
         line-height: 32px;
         color: rgba(255, 255, 255, 0.54);
-        margin: 24px 0px 0px 50px;
+        margin: 24px 0 0 50px;
       }
       .card .cardRightColumn ul {
-        margin-top: 0px;
+        margin-top: 0;
         color: rgba(255, 255, 255, 0.87);
         padding-left: 16px;
         /* NOTE: this URL must be relative to the ui_components sub dir,
