--- a/src/server_manager/ui_components/outline-modal-dialog.html
+++ b/src/server_manager/ui_components/outline-modal-dialog.html
@@ -21,7 +21,7 @@
     <style include='cloud-install-styles'></style>
     <style>
       :host {
-        margin: 0px;
+        margin: 0;
       }
       h3 {
         margin-bottom: 0;
