--- a/src/server_manager/ui_components/outline-server-creator.html
+++ b/src/server_manager/ui_components/outline-server-creator.html
@@ -46,7 +46,7 @@
       }
 
       .stepheader {
-        padding: 24px 0px 24px 0px;
+        padding: 24px 0 24px 0;
         vertical-align: middle;
         height: auto;
         text-align: center;
@@ -145,10 +145,10 @@
 
       hr {
         width: 46px;
-        border-width: 0px 0px 1px 0px;
+        border-width: 0 0 1px 0;
         border-style: solid;
         border-color: rgba(0, 0, 0, 0.24);
-        margin: 0px 24px 2px 24px;
+        margin: 0 24px 2px 24px;
         border: 1px, 1px, 1px, 1px;
         display: inline-block;
       }
