--- a/src/server_manager/ui_components/outline-server-progress-step.html
+++ b/src/server_manager/ui_components/outline-server-progress-step.html
@@ -41,9 +41,9 @@
 
       h3 {
         font-size: 18px;
-        margin-bottom: 0px;
+        margin-bottom: 0;
         color: rgba(0,0,0,0.54);
-        margin: 0px 0px 0px 0px;
+        margin: 0 0 0 0;
         padding: 14px 0 14px 0;
       }
 
@@ -68,7 +68,7 @@
         --paper-progress-transition-duration: 1.0s;
         --paper-progress-transition-timing-function: linear;
         width: 100%;
-        margin-top: 0px;
+        margin-top: 0;
       }
 
 </style>
