--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -73,7 +73,7 @@
         align-items: flex-start;
       }
       .detail {
-        margin-top: 0px;
+        margin-top: 0;
         font-size: 12px;
       }
       .clickable {
