--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -49,7 +49,7 @@
         background-color: #263238;
       }
       .card-header .headerContents {
-        padding: 24px 24px 0px 32px;
+        padding: 24px 24px 0 32px;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
@@ -101,9 +101,9 @@
         color: white;
         height: 32px;
         font-size: 13px;
-        padding: 0 28px 0px 28px;
+        padding: 0 28px 0 28px;
         background-color: #00bfa5;
-        margin: 0px 12px 0px 96px;
+        margin: 0 12px 0 96px;
         height: 36px;
     }
 
@@ -123,7 +123,7 @@
       .manager-access-key-icon {
         width: 42px;
         height: 42px;
-        margin: 0 18px 0px 12px;
+        margin: 0 18px 0 12px;
       }
       .access-key-icon {
         width: 40px;
@@ -172,7 +172,7 @@
       }
       input.access-key-name:focus {
         border-bottom-color: var(--primary-green);
-        border-radius: 0px;
+        border-radius: 0;
         outline: none;
         font-weight: normal;
       }
@@ -201,7 +201,7 @@
         cursor: pointer;
       }
       paper-dropdown {
-        box-shadow: 0px 0px 20px #999999;
+        box-shadow: 0 0 20px #999999;
       }
       .access-key-row paper-progress {
         width: 50px;
@@ -257,7 +257,7 @@
         font-weight: 500;
         line-height: 28px;
         font-size: 16px;
-        margin: 0px 0px 12px 0px;
+        margin: 0 0 12px 0;
       }
 
       outline-help-bubble paper-button {
@@ -266,7 +266,7 @@
       outline-help-bubble img {
         width: 76px;
         height: auto;
-        margin: 12px 0px 24px 0px;
+        margin: 12px 0 24px 0;
       }
     </style>
 
