--- a/src/server_manager/ui_components/outline-share-dialog.html
+++ b/src/server_manager/ui_components/outline-share-dialog.html
@@ -21,7 +21,7 @@
     <style include='cloud-install-styles'></style>
     <style>
       :host {
-        margin: 0px;
+        margin: 0;
       }
       a {
         color: #009485;
