--- a/src/server_manager/ui_components/outline-feedback-dialog.html
+++ b/src/server_manager/ui_components/outline-feedback-dialog.html
@@ -30,7 +30,7 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
     <style include='cloud-install-styles'></style>
     <style>
       :host {
-        margin: 0px;
+        margin: 0;
       }
       #feedbackWrapper {
         margin-top: 0;
