--- a/src/server_manager/ui_components/outline-help-bubble.html
+++ b/src/server_manager/ui_components/outline-help-bubble.html
@@ -46,12 +46,12 @@
       .upArrowWrapper {
         top: -13px;
         width: 100%;
-        left: 0px;
+        left: 0;
       }
       .downArrowWrapper {
         top: 100%;
         width: 100%;
-        left: 0px;
+        left: 0;
         margin-top: -3px;
       }
       .rightArrowWrapper {
@@ -63,8 +63,8 @@
         left: -10px;
       }
       .upArrow, .downArrow, .rightArrow, .leftArrow {
-        width: 0px;
-        height: 0px;
+        width: 0;
+        height: 0;
         display: inline-block;
       }
       .upArrow {
