--- a/src/server_manager/ui_components/outline-region-picker-step.html
+++ b/src/server_manager/ui_components/outline-region-picker-step.html
@@ -47,21 +47,21 @@
         /* from #00bfa5 */
         background-color: rgba(0, 191, 165, 0.12);
         border: 1px solid rgb(0, 191, 165);
-        box-shadow: 1px 1px 23px 0px rgba(0, 0, 0, 0);
+        box-shadow: 1px 1px 23px 0 rgba(0, 0, 0, 0);
       }
 
       input[type="radio"]+label.city-button:hover {
         border: 1px solid rgb(0, 191, 165);
         border-color: rgba(0, 0, 0, .12);
-        box-shadow: 1px 1px 23px 0px rgba(0, 0, 0, 0.12);
+        box-shadow: 1px 1px 23px 0 rgba(0, 0, 0, 0.12);
       }
 
       input[type="radio"]+label.city-button {
         display: inline-block;
         width: 22%;
         min-width: 100px;
-        margin: 20px 0px 10px 0px;
-        padding: 24px 0px 24px 0px;
+        margin: 20px 0 10px 0;
+        padding: 24px 0 24px 0;
         text-align: center;
         border: 1px solid;
         border-color: rgba(0, 0, 0, .00);
@@ -77,7 +77,7 @@
       .cityNameShort {
         font-size: 24px;
         color: rgba(0, 0, 0, 0.87);
-        padding:12px 0px 4px 0px;
+        padding: 12px 0 4px 0;
       }
       paper-button.primary {
         margin-top: 24px;
