CSS clean up--minify

--- a/src/server_manager/ui_components/outline-server-creator.html
+++ b/src/server_manager/ui_components/outline-server-creator.html
@@ -145,11 +145,8 @@
 
       hr {
         width: 46px;
-        border-width: 0 0 1px 0;
-        border-style: solid;
-        border-color: rgba(0, 0, 0, 0.24);
         margin: 0 24px 2px 24px;
-        border: 1px, 1px, 1px, 1px;
+          border: 1px 1px 1px 1px solid rgba(0, 0, 0, 0.24);
         display: inline-block;
       }
 
