--- a/src/server_manager/ui_components/outline-server-progress-step.html
+++ b/src/server_manager/ui_components/outline-server-progress-step.html
@@ -41,9 +41,8 @@
 
       h3 {
         font-size: 18px;
-        margin-bottom: 0;
         color: rgba(0,0,0,0.54);
-        margin: 0 0 0 0;
+          margin: 0;
         padding: 14px 0 14px 0;
       }
 
