--- a/src/server_manager/ui_components/outline-share-dialog.html
+++ b/src/server_manager/ui_components/outline-share-dialog.html
@@ -139,8 +139,8 @@
         this.$.dialog.open();
       },
       copyClicked: function() {
-        var dt = new this.clipboard.DT();
-        dt.setData("text/plain", this.$.selectableText.innerText);
+          const dt = new this.clipboard.DT();
+          dt.setData("text/plain", this.$.selectableText.innerText);
         dt.setData("text/html", this.$.selectableText.innerHTML);
         this.clipboard.write(dt);
         this.$.copyText.removeAttribute('hidden');
