--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -49,9 +49,7 @@
   </template>
   <script>
     Polymer({
-      is: 'outline-step-view',
-      properties: {
-      }
+      is: 'outline-step-view'
     });
   </script>
 </dom-module>
