--- a/src/server_manager/ui_components/outline-server-progress-step.html
+++ b/src/server_manager/ui_components/outline-server-progress-step.html
@@ -19,6 +19,7 @@
 
 <link rel="import" href="./cloud-install-styles.html">
 <link rel="import" href="./outline-progress-spinner.html">
+<link rel="import" href="./outline-step-view.html">
 <link rel="import" href="./style.css">
 
 <dom-module id="outline-server-progress-step">
@@ -26,40 +27,35 @@
     <style include="cloud-install-styles"></style>
 
     <style>
-       :host {
+      :host {
         text-align: center;
       }
-
+      .card {
+        padding: 24px;
+        margin: 24px;
+        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+        border-radius: 2px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
       .servername {
-        margin-top: 24px;
+        margin: 24px 0 72px 0;
         text-align: center;
       }
-
-      .servername img {
-        height: 96px;
-      }
-
       h3 {
         font-size: 18px;
-        margin-bottom: 0px;
+        margin-bottom: 12px;
         color: rgba(0,0,0,0.54);
         margin: 0px 0px 0px 0px;
         padding: 14px 0 14px 0;
       }
-
       .servername p {
-        text-align: center;
-        margin-top: 12px;
-        margin-bottom: 64px;
+        font-size: 14px;
+        color: rgba(0,0,0,0.54);
       }
-
-      .message {
-        width: 100%;
-        position: initial;
-      }
-
       outline-progress-spinner {
-        margin-top: 20%;
+        margin-top: 72px;
       }
       paper-progress {
          background: #ffffff;
@@ -70,20 +66,25 @@
         width: 100%;
         margin-top: 0px;
       }
+      paper-button {
+        width: 100%;
+        border: 1px solid rgba(0,0,0,0.12);
+        border-radius: 2px;
+      }
+    </style>
 
-</style>
-
-    <div class='card-content'>
-      <div class='walkthrough'>
-        <h3>Setting up Outline. <br> This could take up to two minutes.</h3>
-            <paper-progress id='bar' class='transiting'></paper-progress>
+    <outline-step-view>
+      <span slot="step-title">Setting up Outline.</span>
+      <span slot="step-description">This could take up to two minutes. You can<br/> destroy this server at anytime.</span>
+      <paper-progress id='bar' class='transiting'></paper-progress>
+      <div class='card'>
+        <outline-progress-spinner></outline-progress-spinner>
+        <div class='servername'>
+          <h3>{{serverName}}</h3>
+        </div>
+        <paper-button id='cancelButton' hidden$='{{!showCancelButton}}' on-tap='handleCancelTapped'>Cancel</paper-button>
       </div>
-      <outline-progress-spinner></outline-progress-spinner>
-      <div class='servername'>
-        <h3>{{serverName}}</h3>
-      </div>
-      <paper-button id='cancelButton' hidden$='{{!showCancelButton}}' on-tap='handleCancelTapped'>Cancel</paper-button>
-    </div>
+    </outline-step-view>
 
   </template>
 
