--- a/src/server_manager/ui_components/cloud-install-styles.html
+++ b/src/server_manager/ui_components/cloud-install-styles.html
@@ -60,6 +60,7 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
       paper-progress {
         width: 100%;
         margin-top: 24px;
+        --paper-progress-active-color: #00bfa5;
       }
 
       hr {
@@ -78,7 +79,7 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
         letter-spacing: .02em;
         color: rgba(255,255,255,0.86);
         padding: 0;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+        border-bottom: 2px solid rgba(0, 0, 0, 0.12);
         /* Toolbar Copy 3: */
       }
 
