--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -20,6 +20,7 @@
 <link rel='import' href='../bower_components/paper-dialog/paper-dialog.html'>
 <link rel='import' href='../bower_components/paper-progress/paper-progress.html'>
 <link rel="import" href="./cloud-install-styles.html">
+<link rel="import" href="./outline-step-view.html">
 <link rel="import" href="./style.css">
 
 <dom-module id="outline-manual-server-entry">
@@ -33,7 +34,7 @@
         background: #FFFFFF;
         box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
         border-radius: 2px;
-        margin: 31px;
+        margin: 24px;
         text-align: left;
         padding: 24px;
       }
@@ -68,52 +69,56 @@
         margin-left: 20px;
       }
       #buttonRow {
-        text-align: right;
-        position: relative;
         width: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
+      paper-button {
+        width: 45%;
+      }
+      paper-progress {
+        margin: 0;
       }
       #cancelButton {
-        width: 75px;
-        left: 0;
-        position: absolute;
+        border: 1px solid rgba(0,0,0,0.12);
+        border-radius: 2px;
+        width: 45%;
       }
       #doneButton {
-        width: 139px;
+        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+        border-radius: 2px;
+        width: 45%;
       }
       #terminalIcon {
         width: 20px;
       }
     </style>
-    <div class='walkthrough'>
-      <div hidden$='[[showConnection]]'>
-        <h3>Follow these instructions to install on whichever cloud provider you want.  You can also install on your own infrastructure.</h3>
-      </div>
-      <div hidden$='[[!showConnection]]'>
-        <h3>Attempting to connect...</h3>
-        <paper-progress indeterminate class="slow"></paper-progress>
-      </div>
-    </div>
+    <outline-step-view>
+      <span slot="step-title">Set up Outline on your server.</span>
+        <span slot="step-description">Follow these instructions to install Outline with a<br/> cloud provider or on your own infrastructure.</span>
+      <paper-progress hidden$='[[!showConnection]]' indeterminate class="slow"></paper-progress>
 
-    <div class='card'>
-      <div>
-        <iron-icon src="images/terminal.svg" id="terminalIcon"></iron-icon>
-        <div class='stepContent'>
-          <div class='instructions'>First, log into your server, and run the following command:</div>
-          <div id='command' class='code'>bash -c "$(wget -qO- https://raw.githubusercontent.com/Jigsaw-Code/outline-server/master/src/server_manager/install_scripts/install_server.sh)"</div>
+      <div class='card'>
+        <div>
+          <iron-icon src="images/terminal.svg" id="terminalIcon"></iron-icon>
+          <div class='stepContent'>
+            <div class='instructions'>First, log into your server, and run the following command:</div>
+            <div id='command' class='code'>bash -c "$(wget -qO- https://raw.githubusercontent.com/Jigsaw-Code/outline-server/master/src/server_manager/install_scripts/install_server.sh)"</div>
+          </div>
         </div>
-      </div>
-      <div>
-        <iron-icon icon="content-paste"></iron-icon>
-        <div class='stepContent'>
-          <div class='instructions'>Second, paste the output from the installation process here and click 'Done'.</div>
-          <textarea id='serverConfig' type='text' placeholder$='[[placeholderText]]' class='code' rows='4'></textarea>
+        <div>
+          <iron-icon icon="content-paste"></iron-icon>
+          <div class='stepContent'>
+            <div class='instructions'>Second, paste the output from the installation process here and click 'Done'.</div>
+            <textarea id='serverConfig' type='text' placeholder$='[[placeholderText]]' class='code' rows='4'></textarea>
+          </div>
         </div>
-      </div>
-      <div id='buttonRow'>
-        <paper-button id='cancelButton' on-tap="cancelTapped" class="secondary">CANCEL</paper-button>
-        <paper-button id='doneButton' on-tap="doneTapped" class="primary">DONE</paper-button>
-      </div>
-    </div>  <!-- end of .card -->
+        <div id='buttonRow'>
+          <paper-button id='cancelButton' on-tap="cancelTapped" class="secondary">CANCEL</paper-button>
+          <paper-button id='doneButton' on-tap="doneTapped" class="primary">DONE</paper-button>
+        </div>
+      </div>  <!-- end of .card -->
+    </outline-step-view>
 
     <paper-dialog id='errorDialog' modal>
       <h3 hidden$='[[!errorTitle]]'>[[errorTitle]]</h3>
